# Copyright (c) 2015 The Robigalia Project Developers
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license <LICENSE-MIT
# or http://opensource.org/licenses/MIT>, at your option. All files in the
# project carrying such notice may not be copied, modified, or distributed
# except according to those terms.

cargo-features = ["edition"]

[package]
name = "pci-tmp"
version = "0.0.1"
edition = "2018"
#build = "build.rs"

[dependencies]
bitflags = "1.0.4"

[features]
